// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Recover Password Controller Snapshot Test for OTP request exceeded 1`] = `
{
  "body": {
    "message": "OTP request exceed, try again later.",
    "success": false,
  },
  "status": 429,
}
`;

exports[`Recover Password Controller Snapshot Test for database error 1`] = `
{
  "body": {
    "message": "Oops! Something went wrong while saving new user.Try again later.",
    "success": false,
  },
  "status": 500,
}
`;

exports[`Recover Password Controller Snapshot Test for email not verified (not expired) 1`] = `
{
  "body": {
    "message": "Email not verified, please verify it.",
    "success": false,
  },
  "status": 400,
}
`;

exports[`Recover Password Controller Snapshot Test for email not verified and expired 1`] = `
{
  "body": {
    "message": "Looks like that user doesn't exist in our system.",
    "success": false,
  },
  "status": 404,
}
`;

exports[`Recover Password Controller Snapshot Test for inactive user 1`] = `
{
  "body": {
    "message": "Your account is blocked, you can't recover it.",
    "success": false,
  },
  "status": 400,
}
`;

exports[`Recover Password Controller Snapshot Test for missing usernameOrEmail 1`] = `
{
  "body": {
    "message": "Username or email is required.",
    "success": false,
  },
  "status": 400,
}
`;

exports[`Recover Password Controller Snapshot Test for successful recover password request 1`] = `
{
  "body": {
    "data": {
      "email": "test@gmail.com",
      "fullName": "Test User",
      "userId": "mocked-user-id",
    },
    "message": "Verification link sended to your email successfully.",
    "success": true,
  },
  "status": 200,
}
`;

exports[`Recover Password Controller Snapshot Test for user not found 1`] = `
{
  "body": {
    "message": "Looks like that user doesn't exist in our system.",
    "success": false,
  },
  "status": 404,
}
`;
